added html structure and content

--- a/starter-code/blog.html
+++ b/starter-code/blog.html
@@ -5,9 +5,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- External Stylesheets -->
+    <link rel="stylesheet" href="css/styles.css">
     <title>Monument Magazine</title>
 </head>
 <body>
-    <!-- Content Goes Here. -->
+
+<header>
+
+    <nav>
+
+        <ul>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="gallery.html">GALLERY</a></li>
+            <li><a href="blog.html">BLOG</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+
+    </nav>
+
+    <h1>MONUMENT</h1>
+
+</header>
+
+<main>
+
+    <h3>11/23/2016</h3>
+
+    <h2>A VISUAL GUIDE TO THE SOUTHWEST</h2>
+
+    <img src="images/blog_1.jpg" alt="blog-1-img">
+
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled it to make a type 
+        specimen book. It has survived not only five centuries, but also the leap into 
+        electronic typesetting, remaining essentially unchanged. It was popularised in 
+        the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+        and more recently with desktop publishing software like Aldus PageMaker including 
+        versions of Lorem Ipsum.</p>
+
+    <img src="images/blog_2.jpg" alt="blog-2-img">
+
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled it to make a type 
+        specimen book. It has survived not only five centuries, but also the leap into 
+        electronic typesetting, remaining essentially unchanged. It was popularised in 
+        the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+        and more recently with desktop publishing software like Aldus PageMaker including 
+        versions of Lorem Ipsum.</p>
+
+
+</main>
+
+<article>
+
+    <h3>ABOUT US</h3>
+
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+
+    <P>It has survived not only five centuries, but also the leap into 
+        electronic typesetting, remaining essentially unchanged.</P>
+
+</article>
+
+<aside>
+
+    <h3>RECENT ISSUES</h3>
+
+    <ul>
+        <li><a href="nineteen.html">Issue Nineteen - Camping</a></li>
+        <li><a href="eighteen.html">Issue Eighteen - Food</a></li>
+        <li><a href="seventeen.html">Issue Seventeen - Signs</a></li>
+        <li><a href="sixteen.html">Issue Sixteen - Friends</a></li>
+        <li><a href="fifteen.html">Issue Fifteen - Carnivals</a></li>
+        <li><a href="fourteen.html">Issue Fourteen - Gatherings</a></li>
+    </ul>
+
+</aside>
+
+<footer>
+
+    <ul>
+        <li><a href="facebook.html">FACEBOOK</a>></li>
+        <li><a href="twitter.html">TWITTER</a></li>
+        <li><a href="instagram.html">INSTAGRAM</a></li>
+    </ul>
+
+    <p>&copy; 2018 PRADEEP KHARB</p>
+
+</footer>
+
 </body>
 </html>
