added CSS and made changes to blog.html

--- a/starter-code/blog.html
+++ b/starter-code/blog.html
@@ -6,11 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- External Stylesheets -->
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
+
+
     <title>Monument Magazine</title>
 </head>
 <body>
 
-<header>
+<header class="container">
 
     <nav>
 
@@ -22,8 +27,9 @@
         </ul>
 
     </nav>
+    <img src="images/blog_header_bg.jpg" alt="header-bg">
 
-    <h1>MONUMENT</h1>
+    <h1 class="img_txt">MONUMENT</h1>
 
 </header>
 
@@ -63,10 +69,16 @@
     <h3>ABOUT US</h3>
 
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+        It has survived not only five centuries, but also the leap into 
+        electronic typesetting, remaining essentially unchanged.</p>
 
     <P>It has survived not only five centuries, but also the leap into 
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+        It has survived not only five centuries, but also the leap into
         electronic typesetting, remaining essentially unchanged.</P>
+
+    <img src="images/about.jpg" alt="about">
 
 </article>
 
@@ -88,10 +100,13 @@
 <footer>
 
     <ul>
-        <li><a href="facebook.html">FACEBOOK</a>></li>
-        <li><a href="twitter.html">TWITTER</a></li>
-        <li><a href="instagram.html">INSTAGRAM</a></li>
+        <li><a href="facebook.html"><i class="fab fa-facebook-square fa-3x"></i></a></li>
+         
+        <li><a href="twitter.html"><i class="fab fa-twitter-square fa-3x"></i></a></li>
+        <li><a href="instagram.html"><i class="fab fa-instagram fa-3x"></i></a></li>
     </ul>
+
+    <hr>
 
     <p>&copy; 2018 PRADEEP KHARB</p>
 
