--- a/starter-code/blog.html
+++ b/starter-code/blog.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<header class="container">
+<header class="top_img">
 
     <nav>
 
@@ -27,21 +27,29 @@
         </ul>
 
     </nav>
+    
+
     <img src="images/blog_header_bg.jpg" alt="header-bg">
 
     <h1 class="img_txt">MONUMENT</h1>
 
 </header>
 
-<main>
 
-    <h3>11/23/2016</h3>
+<!--begin class main_one -->
+<div class="main_one">
 
-    <h2>A VISUAL GUIDE TO THE SOUTHWEST</h2>
+<!--begin class main_one_a -->
+<div class="main_one_a">
+    <main>
 
-    <img src="images/blog_1.jpg" alt="blog-1-img">
+        <h3>11/23/2016</h3>
 
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        <h2>A VISUAL GUIDE TO THE SOUTHWEST</h2>
+
+        <img src="images/blog_1.jpg" alt="blog-1-img">
+
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
         when an unknown printer took a galley of type and scrambled it to make a type 
         specimen book. It has survived not only five centuries, but also the leap into 
@@ -50,9 +58,9 @@
         and more recently with desktop publishing software like Aldus PageMaker including 
         versions of Lorem Ipsum.</p>
 
-    <img src="images/blog_2.jpg" alt="blog-2-img">
+        <img src="images/blog_2.jpg" alt="blog-2-img">
 
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
         when an unknown printer took a galley of type and scrambled it to make a type 
         specimen book. It has survived not only five centuries, but also the leap into 
@@ -62,40 +70,49 @@
         versions of Lorem Ipsum.</p>
 
 
-</main>
+    </main>
+</div>
+<!--end class main_one_b -->
 
-<article>
+<!--begin class main_one_b -->
+<div class="main_one_b">
+        <article>
 
-    <h3>ABOUT US</h3>
+            <h3>ABOUT US</h3>
 
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-        It has survived not only five centuries, but also the leap into 
-        electronic typesetting, remaining essentially unchanged.</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+               Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+               It has survived not only five centuries, but also the leap into 
+               electronic typesetting, remaining essentially unchanged.</p>
 
-    <P>It has survived not only five centuries, but also the leap into 
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-        It has survived not only five centuries, but also the leap into
-        electronic typesetting, remaining essentially unchanged.</P>
+            <P>It has survived not only five centuries, but also the leap into 
+               Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+               It has survived not only five centuries, but also the leap into
+               electronic typesetting, remaining essentially unchanged.</P>
 
-    <img src="images/about.jpg" alt="about">
+            <img src="images/about.jpg" alt="about">
 
-</article>
+        </article>
 
-<aside>
+        <aside>
 
-    <h3>RECENT ISSUES</h3>
+            <h3>RECENT ISSUES</h3>
 
-    <ul>
-        <li><a href="nineteen.html">Issue Nineteen - Camping</a></li>
-        <li><a href="eighteen.html">Issue Eighteen - Food</a></li>
-        <li><a href="seventeen.html">Issue Seventeen - Signs</a></li>
-        <li><a href="sixteen.html">Issue Sixteen - Friends</a></li>
-        <li><a href="fifteen.html">Issue Fifteen - Carnivals</a></li>
-        <li><a href="fourteen.html">Issue Fourteen - Gatherings</a></li>
-    </ul>
+            <ul>
+                <li><a href="nineteen.html">Issue Nineteen - Camping</a></li>
+                <li><a href="eighteen.html">Issue Eighteen - Food</a></li>
+                <li><a href="seventeen.html">Issue Seventeen - Signs</a></li>
+                <li><a href="sixteen.html">Issue Sixteen - Friends</a></li>
+                <li><a href="fifteen.html">Issue Fifteen - Carnivals</a></li>
+                <li><a href="fourteen.html">Issue Fourteen - Gatherings</a></li>
+            </ul>
 
-</aside>
+        </aside>
+</div>
+<!--end class main_one_b -->
+
+</div>
+<!--begin class main_one -->
 
 <footer>
 
@@ -105,6 +122,11 @@
         <li><a href="twitter.html"><i class="fab fa-twitter-square fa-3x"></i></a></li>
         <li><a href="instagram.html"><i class="fab fa-instagram fa-3x"></i></a></li>
     </ul>
+
+    <form>
+        <input type="text" placeholder="EMAIL ADDRESS">
+        <button type="button">KEEP IN TOUCH</button>
+    </form>
 
     <hr>
 
