added part 3 changes

--- a/starter-code/blog.html
+++ b/starter-code/blog.html
@@ -39,43 +39,43 @@
 <!--begin class main_one -->
 <div class="main_one">
 
-<!--begin class main_one_a -->
-<div class="main_one_a">
-    <main>
+    <!--begin class main_one_a -->
+    <div class="main_one_a">
+        <main>
 
-        <h3>11/23/2016</h3>
+           <h3>11/23/2016</h3>
 
-        <h2>A VISUAL GUIDE TO THE SOUTHWEST</h2>
+           <h2>A VISUAL GUIDE TO THE SOUTHWEST</h2>
 
-        <img src="images/blog_1.jpg" alt="blog-1-img">
+           <img src="images/blog_1.jpg" alt="blog-1-img">
 
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-        when an unknown printer took a galley of type and scrambled it to make a type 
-        specimen book. It has survived not only five centuries, but also the leap into 
-        electronic typesetting, remaining essentially unchanged. It was popularised in 
-        the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-        and more recently with desktop publishing software like Aldus PageMaker including 
-        versions of Lorem Ipsum.</p>
+           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+           Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+           when an unknown printer took a galley of type and scrambled it to make a type 
+           specimen book. It has survived not only five centuries, but also the leap into 
+           electronic typesetting, remaining essentially unchanged. It was popularised in 
+           the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+           and more recently with desktop publishing software like Aldus PageMaker including 
+           versions of Lorem Ipsum.</p>
 
-        <img src="images/blog_2.jpg" alt="blog-2-img">
+           <img src="images/blog_2.jpg" alt="blog-2-img">
 
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-        when an unknown printer took a galley of type and scrambled it to make a type 
-        specimen book. It has survived not only five centuries, but also the leap into 
-        electronic typesetting, remaining essentially unchanged. It was popularised in 
-        the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-        and more recently with desktop publishing software like Aldus PageMaker including 
-        versions of Lorem Ipsum.</p>
+           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+           Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+           when an unknown printer took a galley of type and scrambled it to make a type 
+           specimen book. It has survived not only five centuries, but also the leap into 
+           electronic typesetting, remaining essentially unchanged. It was popularised in 
+           the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+           and more recently with desktop publishing software like Aldus PageMaker including 
+           versions of Lorem Ipsum.</p>
 
 
-    </main>
-</div>
-<!--end class main_one_b -->
+        </main>
+    </div>
+    <!--end class main_one_a -->
 
-<!--begin class main_one_b -->
-<div class="main_one_b">
+    <!--begin class main_one_b -->
+    <div class="main_one_b">
         <article>
 
             <h3>ABOUT US</h3>
@@ -108,11 +108,25 @@
             </ul>
 
         </aside>
-</div>
-<!--end class main_one_b -->
+
+    </div>
+    <!--end class main_one_b -->
 
 </div>
 <!--begin class main_one -->
+
+<!--Contact Form-->
+<div class="form-container">
+    <h1>LEAVE A COMMENT</h1>
+    <!--   Put your HTML here! -->
+    <form id="f1">
+        <input type="text" name="name" placeholder="NAME">
+        <input type="text" name="email" placeholder="EMAIL">
+        <textarea name="comment" placeholder="COMMENT"></textarea>
+        <input type="submit"/>
+    </form>
+</div>
+
 
 <footer>
 
@@ -124,7 +138,7 @@
     </ul>
     <br>
 
-    <form>
+    <form id="f2">
         <input type="text" placeholder="EMAIL ADDRESS">
         <button type="button">KEEP IN TOUCH</button>
     </form>
