added a go-to-top button and moved social media to screen right, both in fixed position

--- a/starter-code/blog.html
+++ b/starter-code/blog.html
@@ -14,12 +14,22 @@
     <title>Monument Magazine</title>
 </head>
 <body>
+    <a href="#top"></a>
+
+<!-- social-icon -->
+<div class="social-icon">
+        <a href="https://www.facebook.com/"><i class="fab fa-facebook-square fa-2x"></i></a>
+        <a href="https://www.twitter.com/"><i class="fab fa-twitter-square fa-2x"></i></a>
+        <a href="https://www.youtube.com/"><i class="fab fa-youtube-square fa-2x"></i></a>
+        <a href="https://plus.google.com/"><i class="fab fa-google-plus-square fa-2x"></i></a>
+    </div>
+    <!-- end of social-icon -->
 
 <header class="top_img">
 
     <nav>
 
-        <ul>
+        <ul id="menu">
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="gallery.html">GALLERY</a></li>
             <li><a href="blog.html">BLOG</a></li>
@@ -36,11 +46,11 @@
 </header>
 
 
-<!--begin class main_one -->
-<div class="main_one">
+<!--begin class main-wrapper -->
+<div class="main-wrapper">
 
-    <!--begin class main_one_a -->
-    <div class="main_one_a">
+    <!--begin class main-box-1 -->
+    <div class="main-box-1">
         <main>
 
            <h3>11/23/2016</h3>
@@ -72,10 +82,10 @@
 
         </main>
     </div>
-    <!--end class main_one_a -->
+    <!--end class main-box-1 -->
 
-    <!--begin class main_one_b -->
-    <div class="main_one_b">
+    <!--begin class main-box-2 -->
+    <div class="main-box-2">
         <article>
 
             <h3>ABOUT US</h3>
@@ -110,10 +120,10 @@
         </aside>
 
     </div>
-    <!--end class main_one_b -->
+    <!--end class main-box-2 -->
 
 </div>
-<!--begin class main_one -->
+<!--end main-wrapper -->
 
 <!--Contact Form-->
 <div class="form-container">
@@ -127,16 +137,22 @@
     </form>
 </div>
 
+<!-- go-top -->
+<div class="go-top button-center">
+    <a href="#top" class=""><i class="fas fa-arrow-alt-circle-up fa-2x"></i></a>
+</div>
+<!-- end of go-top -->
+
 
 <footer>
 
-    <ul>
+    <!-- <ul>
         <li><a href="facebook.html"><i class="fab fa-facebook-square fa-2x"></i></a></li>
          
         <li><a href="twitter.html"><i class="fab fa-twitter-square fa-2x"></i></a></li>
         <li><a href="instagram.html"><i class="fab fa-instagram fa-2x"></i></a></li>
     </ul>
-    <br>
+    <br> -->
 
     <form id="f2">
         <input type="text" placeholder="EMAIL ADDRESS">
