made a landing page, finished header image, text on image, archive section and about section

--- a/starter-code/landing.html
+++ b/starter-code/landing.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- External Stylesheets -->
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/landing.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
@@ -14,7 +15,7 @@
     <title>Monument Magazine</title>
 </head>
 <body>
-    <a href="#top"></a>
+    <a href="top"></a>
 
 <!-- social-icon -->
 <div class="social-icon">
@@ -25,7 +26,7 @@
     </div>
     <!-- end of social-icon -->
 
-<header class="top_img">
+<header class="hd-fixed">
 
     <nav>
 
@@ -39,56 +40,67 @@
     </nav>
     
 
-    <img src="images/blog_header_bg.jpg" alt="header-bg">
+    <img src="images/home_header_bg.jpg" alt="header-bg">
 
     <h1 class="img_txt">MONUMENT</h1>
+    <h2 class="img_txt-2">A LIFESTYLE MAGAZINE</h2>
 
 </header>
 
 
 <!--begin class main-wrapper -->
-<div class="main-wrapper">
+<main class="main-wrapper-landing">
 
-    <!--begin class main-box-1 -->
-    <div class="main-box-1">
-        <main>
+<h2>FROM THE ARCHIVE</h2>
 
-           <h3>11/23/2016</h3>
+    <!--begin class container-landing -->
+    <div class="container-landing">
 
-           <h2>A VISUAL GUIDE TO THE SOUTHWEST</h2>
+        <div class="item-1">
 
-           <img src="images/blog_1.jpg" alt="blog-1-img">
+              <img src="images/article_1.jpg" alt="blog-1-img">
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+              when an unknown printer took a galley of type and scrambled it to make a type 
+              specimen book. </p>
+              <a href="#more.html" class="read-more">READ MORE</a>
 
-           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-           Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-           when an unknown printer took a galley of type and scrambled it to make a type 
-           specimen book. It has survived not only five centuries, but also the leap into 
-           electronic typesetting, remaining essentially unchanged. It was popularised in 
-           the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-           and more recently with desktop publishing software like Aldus PageMaker including 
-           versions of Lorem Ipsum.</p>
+        </div>
 
-           <img src="images/blog_2.jpg" alt="blog-2-img">
+        <div class="item-1">
 
-           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-           Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-           when an unknown printer took a galley of type and scrambled it to make a type 
-           specimen book. It has survived not only five centuries, but also the leap into 
-           electronic typesetting, remaining essentially unchanged. It was popularised in 
-           the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-           and more recently with desktop publishing software like Aldus PageMaker including 
-           versions of Lorem Ipsum.</p>
+              <img src="images/article_2.jpg" alt="blog-2-img">
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+              when an unknown printer took a galley of type and scrambled it to make a type 
+              specimen book.</p>
+              <a href="#more.html" class="read-more">READ MORE</a>
 
+        </div>
 
-        </main>
+        <div class="item-1">
+
+              <img src="images/article_3.jpg" alt="blog-2-img">
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+              when an unknown printer took a galley of type and scrambled it to make a type 
+              specimen book.</p>
+              <a href="#more.html" class="read-more">READ MORE</a>
+
+        </div>
+
     </div>
-    <!--end class main-box-1 -->
+    <!--end class container-landing -->
 
-    <!--begin class main-box-2 -->
-    <div class="main-box-2">
-        <article>
 
-            <h3>ABOUT US</h3>
+</main>
+<!--end main class main-wrapper-landing -->
+
+<!--begin class about-landing -->
+<article class="about-landing">
+
+            <h2>ABOUT THE MAGAZINE</h2>
+            <h3>A LIFESTYLE MAGAZINE CREATED WITH LOVE</h3>
 
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -100,9 +112,8 @@
                It has survived not only five centuries, but also the leap into
                electronic typesetting, remaining essentially unchanged.</P>
 
-            <img src="images/about.jpg" alt="about">
-
-        </article>
+</article>
+<!--end class about-landing -->
 
         <aside>
 
@@ -119,8 +130,7 @@
 
         </aside>
 
-    </div>
-    <!--end class main-box-2 -->
+
 
 </div>
 <!--end main-wrapper -->
@@ -139,7 +149,7 @@
 
 <!-- go-top -->
 <div class="go-top button-center">
-    <a href="#top" class=""><i class="fas fa-arrow-alt-circle-up fa-2x"></i></a>
+    <a href="#top"><i class="fas fa-arrow-alt-circle-up fa-2x"></i></a>
 </div>
 <!-- end of go-top -->
 
