created a landing page, added anchor tags, made it responsive for tablet and smartphone

--- a/starter-code/blog.html
+++ b/starter-code/blog.html
@@ -30,10 +30,10 @@
     <nav>
 
         <ul id="menu">
-            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="landing.html">ABOUT</a></li>
             <li><a href="gallery.html">GALLERY</a></li>
             <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="#contact-1">CONTACT</a></li>
         </ul>
 
     </nav>
@@ -143,7 +143,7 @@
 </div>
 <!-- end of go-top -->
 
-
+<a name="contact-1"></a>
 <footer>
 
     <!-- <ul>
