--- a/starter-code/landing.html
+++ b/starter-code/landing.html
@@ -31,16 +31,16 @@
     <nav>
 
         <ul id="menu">
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="gallery.html">GALLERY</a></li>
+            <li><a href="landing.html">ABOUT</a></li>
+            <li><a href="#gallery-1">GALLERY</a></li>
             <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="#contact-1">CONTACT</a></li>
         </ul>
 
     </nav>
-    
-
-    <img src="images/home_header_bg.jpg" alt="header-bg">
+    <!-- <div class="header-img"> -->
+       <img class="header-img" src="images/home_header_bg.jpg" alt="header-bg">
+    <!-- </div> -->
 
     <h1 class="img_txt">MONUMENT</h1>
     <h2 class="img_txt-2">A LIFESTYLE MAGAZINE</h2>
@@ -63,7 +63,11 @@
               Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
               when an unknown printer took a galley of type and scrambled it to make a type 
               specimen book. </p>
-              <a href="#more.html" class="read-more">READ MORE</a>
+
+              <div> 
+                  <a href="#more.html" class="read-more">READ MORE</a>
+              </div>
+             
 
         </div>
 
@@ -74,7 +78,9 @@
               Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
               when an unknown printer took a galley of type and scrambled it to make a type 
               specimen book.</p>
-              <a href="#more.html" class="read-more">READ MORE</a>
+              <div> 
+                 <a href="#more.html" class="read-more">READ MORE</a>
+              </div>
 
         </div>
 
@@ -85,7 +91,9 @@
               Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
               when an unknown printer took a galley of type and scrambled it to make a type 
               specimen book.</p>
-              <a href="#more.html" class="read-more">READ MORE</a>
+              <div> 
+                 <a href="#more.html" class="read-more">READ MORE</a>
+              </div>
 
         </div>
 
@@ -107,28 +115,32 @@
                It has survived not only five centuries, but also the leap into 
                electronic typesetting, remaining essentially unchanged.</p>
 
-            <P>It has survived not only five centuries, but also the leap into 
+            <p>It has survived not only five centuries, but also the leap into 
                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
                It has survived not only five centuries, but also the leap into
-               electronic typesetting, remaining essentially unchanged.</P>
+               electronic typesetting, remaining essentially unchanged.</p>
 
 </article>
 <!--end class about-landing -->
 
-        <aside>
+<aside>
 
-            <h3>RECENT ISSUES</h3>
+    <a name="gallery-1"></a>
+    <h2>ISSUE TWENTY</h2>
+    <h3>A VISUAL GUIDE TO THE SOUTHWEST</h3>
 
-            <ul>
-                <li><a href="nineteen.html">Issue Nineteen - Camping</a></li>
-                <li><a href="eighteen.html">Issue Eighteen - Food</a></li>
-                <li><a href="seventeen.html">Issue Seventeen - Signs</a></li>
-                <li><a href="sixteen.html">Issue Sixteen - Friends</a></li>
-                <li><a href="fifteen.html">Issue Fifteen - Carnivals</a></li>
-                <li><a href="fourteen.html">Issue Fourteen - Gatherings</a></li>
-            </ul>
+    <div class="gallery">
+        <img src="images/gallery_1.jpg" id="img1"/>
+        <img src="images/gallery_4.jpg" id="img2"/>
+        <img src="images/gallery_5.jpg" id="img3"/>
+        <img src="images/gallery_3.jpg" id="img4"/>
+        <img src="images/gallery_2.jpg" id="img5"/>
+        <img src="images/gallery_6.jpg" id="img6"/>
+    </div>
 
-        </aside>
+ 
+
+</aside>
 
 
 
@@ -153,7 +165,7 @@
 </div>
 <!-- end of go-top -->
 
-
+<a name="contact-1"></a>
 <footer>
 
     <!-- <ul>
